--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -9,7 +9,7 @@
     "message": "Este plugin like automáticamente los vídeos de YouTube. Puedes elegir de utilizar el plugin en todos los vídeos o unicamente en los vídeos suscribidos,  tambien puedes desactivar el plugin. Puedes poner un dislike en un vídeo, despues el plugin no pondra like automáticamente. Ninguna conexión necesitada. Puedes señalar problemas, proponer ideos y contribuir."
   },
   "appStoreContribute": {
-    "message": "Contribuir"
+    "message": "Contribuisci"
   },
   "optLikeWhatTitle": {
     "message": "¿Qué videos?"
