--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -3,7 +3,7 @@
 		"message": "YouTube Auto Like"
 	},
 	"appDesc": {
-		"message": "Like automatiquement les vidéos YouTube videos des vos créateurs préférés."
+		"message": "Like automatiquement les vidéos YouTube de vos créateurs préférés."
 	},
   "appStoreDesc": {
     "message": "Ce plugin like automatiquement les vidéos YouTube, comme cela vous n'oubliez plus de supporter vos créateurs préférés. Vous pouvez choisir d'aimer toutes les vidéos, seulement des chaines souscrites ou aucune. Si vous dislikez une vidéo, celle-ci ne sera pas reliker par la suite. Aucune connexion nécessaire. Vous pouvez proposer de nouvelles fonctionnalités ou contribuer au plugin."
@@ -12,10 +12,10 @@
     "message": "Contribuer"
   },
   "optLikeWhatTitle": {
-    "message": "Quelles vidéos?"
+    "message": "Quelles vidéos ?"
   },
   "optLikeWhenTitle": {
-    "message": "À quelle vitesse?"
+    "message": "À quelle vitesse ?"
   },
 	"optLikeSub": {
 		"message": "Like les vidéos des chaines abonnées"
@@ -42,6 +42,6 @@
     "message": "Ne fonctionne pas?"
   },
   "reloadNotice": {
-    "message": "Reload the page to apply changes."
+    "message": "Actualiser la page pour appliquer les changements."
   }
 }
