--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -18,7 +18,7 @@
     "message": "All videos"
   },
   "optDisable": {
-    "message": "Disable"
+    "message": "Disable extension"
   },
   "optLikeInstant": {
     "message": "Instantly"
@@ -29,13 +29,28 @@
   "optLikePercent": {
     "message": "percent"
   },
-  "linkDonate": {
-    "message": "Feed my cats"
-  },
   "linkReport": {
     "message": "Not working?"
   },
   "reloadNotice": {
     "message": "Reload the page to apply changes."
+  },
+  "updateNotice": {
+    "message": "Hey! There's a newer version available."
+  },
+  "download": {
+    "message": "Download"
+  },
+  "seeReleases": {
+    "message": "See releases"
+  },
+  "saving": {
+    "message": "Saving..."
+  },
+  "donateAppeal": {
+    "message": "Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can buy my cats a snack."
+  },
+  "donateLink": {
+    "message": "Cat snack store"
   }
 }
