--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -29,13 +29,28 @@
   "optLikePercent": {
     "message": "por ciento"
   },
-  "linkDonate": {
-    "message": "Alimente a mis gatos"
-  },
   "linkReport": {
     "message": "¿No funciona?"
   },
   "reloadNotice": {
     "message": "Recarga la página para ver cambios."
+  },
+  "updateNotice": {
+    "message": "Hey! There's a newer version available."
+  },
+  "download": {
+    "message": "Download"
+  },
+  "seeReleases": {
+    "message": "See releases"
+  },
+  "saving": {
+    "message": "Saving..."
+  },
+  "donateAppeal": {
+    "message": "Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can buy my cats a snack."
+  },
+  "donateLink": {
+    "message": "Cat snack store"
   }
 }
