--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -29,13 +29,28 @@
   "optLikePercent": {
     "message": "yüzde"
   },
-  "linkDonate": {
-    "message": "Kedilerimi besle"
-  },
   "linkReport": {
     "message": "Hata bildir"
   },
   "reloadNotice": {
     "message": "Değişiklikleri uygulamak için sayfayı yeniden yükleyin."
+  },
+  "updateNotice": {
+    "message": "Hey! There's a newer version available."
+  },
+  "download": {
+    "message": "Download"
+  },
+  "seeReleases": {
+    "message": "See releases"
+  },
+  "saving": {
+    "message": "Saving..."
+  },
+  "donateAppeal": {
+    "message": "Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can buy my cats a snack."
+  },
+  "donateLink": {
+    "message": "Cat snack store"
   }
 }
